// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findMatchingOrders, updatesRequired false, bid balance 0 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "ordersToMatch": Array [
    Object {
      "amount": 20,
      "leftOrderHash": "orderHash1",
      "pair": "pair",
      "rightOrderHash": "orderHash3",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired false, no ask live order 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "ordersToMatch": Array [],
}
`;

exports[`findMatchingOrders, updatesRequired false, no bid live order 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "ordersToMatch": Array [],
}
`;

exports[`findMatchingOrders, updatesRequired false, no bids 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "ordersToMatch": Array [],
}
`;

exports[`findMatchingOrders, updatesRequired false, no matching 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "ordersToMatch": Array [],
}
`;

exports[`findMatchingOrders, updatesRequired true, ask balance 0 1`] = `
Object {
  "orderBookLevelUpdates": Array [
    Object {
      "change": -20,
      "count": -1,
      "price": 0.02,
      "side": "bid",
    },
    Object {
      "change": -20,
      "count": 0,
      "price": 0.02,
      "side": "ask",
    },
  ],
  "ordersToMatch": Array [
    Object {
      "amount": 20,
      "leftOrderHash": "orderHash1",
      "pair": "pair",
      "rightOrderHash": "orderHash3",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, bid balance after matching > 0 1`] = `
Object {
  "orderBookLevelUpdates": Array [
    Object {
      "change": -30,
      "count": 0,
      "price": 0.04,
      "side": "bid",
    },
    Object {
      "change": -30,
      "count": -1,
      "price": 0.04,
      "side": "ask",
    },
  ],
  "ordersToMatch": Array [
    Object {
      "amount": 30,
      "leftOrderHash": "orderHash1",
      "pair": "pair",
      "rightOrderHash": "orderHash3",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, bid balance after matching > 0 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 0,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 0.04,
    },
    Object {
      "balance": 20,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 0.05,
    },
  ],
  "bids": Array [
    Object {
      "balance": 10,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 0.04,
    },
    Object {
      "balance": 30,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 0.01,
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, bid balance after matching > 0 3`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 20,
    "balance": 10,
    "createdAt": 1234567890,
    "currentSequence": 5,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 1,
    "matching": 30,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 0.04,
    "side": "bid",
  },
  "orderHash2": Object {
    "account": "account2",
    "amount": 30,
    "balance": 30,
    "createdAt": 1234567890,
    "currentSequence": 6,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 2,
    "matching": 0,
    "orderHash": "orderHash2",
    "pair": "pair",
    "price": 0.01,
    "side": "bid",
  },
  "orderHash3": Object {
    "account": "account3",
    "amount": 30,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 7,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 3,
    "matching": 30,
    "orderHash": "orderHash3",
    "pair": "pair",
    "price": 0.04,
    "side": "ask",
  },
  "orderHash4": Object {
    "account": "account4",
    "amount": 20,
    "balance": 20,
    "createdAt": 1234567890,
    "currentSequence": 8,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 4,
    "matching": 0,
    "orderHash": "orderHash4",
    "pair": "pair",
    "price": 0.05,
    "side": "ask",
  },
}
`;

exports[`findMatchingOrders, updatesRequired true, matching all, all partial filled 1`] = `
Object {
  "orderBookLevelUpdates": Array [
    Object {
      "change": -20,
      "count": -1,
      "price": 0.05,
      "side": "bid",
    },
    Object {
      "change": -20,
      "count": 0,
      "price": 0.04,
      "side": "ask",
    },
    Object {
      "change": -10,
      "count": 0,
      "price": 0.04,
      "side": "bid",
    },
    Object {
      "change": -10,
      "count": -1,
      "price": 0.04,
      "side": "ask",
    },
    Object {
      "change": -20,
      "count": -1,
      "price": 0.04,
      "side": "bid",
    },
    Object {
      "change": -20,
      "count": -1,
      "price": 0.05,
      "side": "ask",
    },
  ],
  "ordersToMatch": Array [
    Object {
      "amount": 20,
      "leftOrderHash": "orderHash1",
      "pair": "pair",
      "rightOrderHash": "orderHash3",
    },
    Object {
      "amount": 10,
      "leftOrderHash": "orderHash2",
      "pair": "pair",
      "rightOrderHash": "orderHash3",
    },
    Object {
      "amount": 20,
      "leftOrderHash": "orderHash2",
      "pair": "pair",
      "rightOrderHash": "orderHash4",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, matching all, all partial filled 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 0,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 0.04,
    },
    Object {
      "balance": 0,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 0.05,
    },
  ],
  "bids": Array [
    Object {
      "balance": 0,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 0.05,
    },
    Object {
      "balance": 0,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 0.04,
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, matching all, all partial filled 3`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 20,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 5,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 1,
    "matching": 20,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 0.05,
    "side": "bid",
  },
  "orderHash2": Object {
    "account": "account2",
    "amount": 30,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 6,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 2,
    "matching": 30,
    "orderHash": "orderHash2",
    "pair": "pair",
    "price": 0.04,
    "side": "bid",
  },
  "orderHash3": Object {
    "account": "account3",
    "amount": 30,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 7,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 3,
    "matching": 30,
    "orderHash": "orderHash3",
    "pair": "pair",
    "price": 0.04,
    "side": "ask",
  },
  "orderHash4": Object {
    "account": "account4",
    "amount": 20,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 8,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 4,
    "matching": 20,
    "orderHash": "orderHash4",
    "pair": "pair",
    "price": 0.05,
    "side": "ask",
  },
}
`;

exports[`findMatchingOrders, updatesRequired true, matching first bid and ask 1`] = `
Object {
  "orderBookLevelUpdates": Array [
    Object {
      "change": -20,
      "count": -1,
      "price": 0.04,
      "side": "bid",
    },
    Object {
      "change": -20,
      "count": 0,
      "price": 0.04,
      "side": "ask",
    },
  ],
  "ordersToMatch": Array [
    Object {
      "amount": 20,
      "leftOrderHash": "orderHash1",
      "pair": "pair",
      "rightOrderHash": "orderHash3",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, matching first bid and ask 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 10,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 0.04,
    },
    Object {
      "balance": 20,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 0.05,
    },
  ],
  "bids": Array [
    Object {
      "balance": 0,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 0.04,
    },
    Object {
      "balance": 30,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 0.01,
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, matching first bid and ask 3`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 20,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 5,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 1,
    "matching": 20,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 0.04,
    "side": "bid",
  },
  "orderHash2": Object {
    "account": "account2",
    "amount": 30,
    "balance": 30,
    "createdAt": 1234567890,
    "currentSequence": 6,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 2,
    "matching": 0,
    "orderHash": "orderHash2",
    "pair": "pair",
    "price": 0.01,
    "side": "bid",
  },
  "orderHash3": Object {
    "account": "account3",
    "amount": 30,
    "balance": 10,
    "createdAt": 1234567890,
    "currentSequence": 7,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 3,
    "matching": 20,
    "orderHash": "orderHash3",
    "pair": "pair",
    "price": 0.04,
    "side": "ask",
  },
  "orderHash4": Object {
    "account": "account4",
    "amount": 20,
    "balance": 20,
    "createdAt": 1234567890,
    "currentSequence": 8,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 4,
    "matching": 0,
    "orderHash": "orderHash4",
    "pair": "pair",
    "price": 0.05,
    "side": "ask",
  },
}
`;

exports[`getAllPendingMatchRequests 1`] = `
Object {
  "txHash": "pendingMatchRequest",
}
`;

exports[`getAllPendingMatchRequests 2`] = `
Array [
  Array [
    "match|cache",
  ],
]
`;

exports[`matchorders 1`] = `
Array [
  Array [
    "code1|code2orderHash2signedOrder",
    "code1|code2orderHash1signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 100,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash5signedOrder",
    "code1|code2orderHash1signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 101,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash2signedOrder",
    "code1|code2orderHash3signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 102,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash4signedOrder",
    "code1|code2orderHash3signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 103,
      "shouldValidate": true,
    },
  ],
]
`;

exports[`matchorders 2`] = `
Array [
  Array [
    Object {
      "matching": 3,
      "method": "update",
      "orderHash": "orderHash1",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash2",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 2,
      "method": "update",
      "orderHash": "orderHash5",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 7,
      "method": "update",
      "orderHash": "orderHash3",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash4",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
]
`;

exports[`matchorders 3`] = `
Array [
  Array [
    "code1|code2",
    "orderHash1",
  ],
  Array [
    "code1|code2",
    "orderHash2",
  ],
  Array [
    "code1|code2",
    "orderHash5",
  ],
  Array [
    "code1|code2",
    "orderHash3",
  ],
  Array [
    "code1|code2",
    "orderHash4",
  ],
]
`;

exports[`matchorders failed 1`] = `
Array [
  Array [
    "code1|code2orderHash2signedOrder",
    "code1|code2orderHash1signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 100,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash5signedOrder",
    "code1|code2orderHash1signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 101,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash2signedOrder",
    "code1|code2orderHash3signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 102,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash4signedOrder",
    "code1|code2orderHash3signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 103,
      "shouldValidate": true,
    },
  ],
]
`;

exports[`matchorders failed 2`] = `
Array [
  Array [
    Object {
      "matching": 3,
      "method": "update",
      "orderHash": "orderHash1",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash2",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 2,
      "method": "update",
      "orderHash": "orderHash5",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 7,
      "method": "update",
      "orderHash": "orderHash3",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash4",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
]
`;

exports[`matchorders failed 3`] = `
Array [
  Array [
    "code1|code2",
    "orderHash1",
  ],
  Array [
    "code1|code2",
    "orderHash2",
  ],
  Array [
    "code1|code2",
    "orderHash5",
  ],
  Array [
    "code1|code2",
    "orderHash3",
  ],
  Array [
    "code1|code2",
    "orderHash4",
  ],
]
`;

exports[`matchorders not fee on token 1`] = `
Array [
  Array [
    "code1|code2orderHash1signedOrder",
    "code1|code2orderHash2signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 100,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash1signedOrder",
    "code1|code2orderHash5signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 101,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash3signedOrder",
    "code1|code2orderHash2signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 102,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash3signedOrder",
    "code1|code2orderHash4signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 103,
      "shouldValidate": true,
    },
  ],
]
`;

exports[`matchorders not fee on token 2`] = `
Array [
  Array [
    Object {
      "matching": 3,
      "method": "update",
      "orderHash": "orderHash1",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash2",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 2,
      "method": "update",
      "orderHash": "orderHash5",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 7,
      "method": "update",
      "orderHash": "orderHash3",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash4",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
]
`;

exports[`matchorders not fee on token 3`] = `
Array [
  Array [
    "code1|code2",
    "orderHash1",
  ],
  Array [
    "code1|code2",
    "orderHash2",
  ],
  Array [
    "code1|code2",
    "orderHash5",
  ],
  Array [
    "code1|code2",
    "orderHash3",
  ],
  Array [
    "code1|code2",
    "orderHash4",
  ],
]
`;

exports[`matchorders, no left raworder 1`] = `
Array [
  Array [
    "code1|code2orderHash2signedOrder",
    "code1|code2orderHash3signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 100,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash4signedOrder",
    "code1|code2orderHash3signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 101,
      "shouldValidate": true,
    },
  ],
]
`;

exports[`matchorders, no left raworder 2`] = `
Array [
  Array [
    Object {
      "matching": 7,
      "method": "update",
      "orderHash": "orderHash3",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 3,
      "method": "update",
      "orderHash": "orderHash2",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash4",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
]
`;

exports[`matchorders, no left raworder 3`] = `
Array [
  Array [
    "code1|code2",
    "orderHash1",
  ],
  Array [
    "code1|code2",
    "orderHash3",
  ],
  Array [
    "code1|code2",
    "orderHash2",
  ],
  Array [
    "code1|code2",
    "orderHash4",
  ],
]
`;

exports[`matchorders, no right raworder 1`] = `
Array [
  Array [
    "code1|code2orderHash5signedOrder",
    "code1|code2orderHash1signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 100,
      "shouldValidate": true,
    },
  ],
  Array [
    "code1|code2orderHash4signedOrder",
    "code1|code2orderHash3signedOrder",
    Object {
      "gasLimit": 300000,
      "gasPrice": "5000000000",
      "nonce": 101,
      "shouldValidate": true,
    },
  ],
]
`;

exports[`matchorders, no right raworder 2`] = `
Array [
  Array [
    Object {
      "matching": 2,
      "method": "update",
      "orderHash": "orderHash1",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 2,
      "method": "update",
      "orderHash": "orderHash5",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash3",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
  Array [
    Object {
      "matching": 4,
      "method": "update",
      "orderHash": "orderHash4",
      "pair": "code1|code2",
      "requestor": "orderMatcher",
      "status": "matching",
    },
  ],
]
`;

exports[`matchorders, no right raworder 3`] = `
Array [
  Array [
    "code1|code2",
    "orderHash1",
  ],
  Array [
    "code1|code2",
    "orderHash2",
  ],
  Array [
    "code1|code2",
    "orderHash5",
  ],
  Array [
    "code1|code2",
    "orderHash3",
  ],
  Array [
    "code1|code2",
    "orderHash4",
  ],
]
`;

exports[`matchorders, no valid match 1`] = `
Array [
  Array [
    "code1|code2",
    "orderHash1",
  ],
  Array [
    "code1|code2",
    "orderHash3",
  ],
]
`;

exports[`persistPendingMatch 1`] = `
Array [
  Array [
    "match|cache",
    "txHash",
    "{\\"pendingRequest\\":\\"pendingRequest\\",\\"transactionHash\\":\\"txHash\\"}",
  ],
]
`;

exports[`queueMatchRequest 1`] = `
Array [
  Array [
    "match|queue",
    "\\"matchRequest\\"",
  ],
]
`;
